--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,11 +15,11 @@
                 <table class="table table-striped table-bordered">
                     <thead class="table-dark">
                         <tr>
-                            <th><a href="/?sort_by=id" class="text-white text-decoration-none">Order ID</a></th>
+                            <th><a href="/admin?sort_by=id" class="text-white text-decoration-none">Order ID</a></th>
                             <th>Username</th>
-                            <th><a href="/?sort_by=type" class="text-white text-decoration-none">Type</a></th>
+                            <th><a href="/admin?sort_by=type" class="text-white text-decoration-none">Type</a></th>
                             <th>Comment</th>
-                            <th>Attached Files</th>
+                            <th>Links</th>
                         </tr>
                     </thead>
                     <tbody>
