fix js and undefind

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
     </div>
         <ul>
             <li>
-                <a href="" key="">Malstavo</a>
+                <a href="" key="malstavo">Malstavo</a>
             </li>
             <li>
                 <a href="" key="home">Главная</a>
