--- a/templates/order-page.html
+++ b/templates/order-page.html
@@ -35,7 +35,7 @@
           </div>     
             <ul>
               <li>
-                <a href="" key="">Malstavo</a>
+                <a href="" key="malstavo">Malstavo</a>
               </li>
                 <li>
                     <a href="" key="home">Главная</a>
@@ -62,7 +62,7 @@
         <p class="description-pg" key="order-form">Пожалуйста, заполните форму ниже для оформления вашего заказа.</p>
         <form class="order-form" enctype="multipart/form-data">
           <label for="tel" key="entering-number">Введите ваш номер телефона:</label>
-          <input type="tel" id="phone" name="phone" class="input-field" placeholder="+7 (___) ___-__-__" pattern="\+7\s\(\d{3}\)\s\d{3}-\d{2}-\d{2}" required>
+          <input type="tel" id="phone" name="phone" class="input-field" placeholder="+7 (___) ___-__-__" required>
 
           <label for="category" key="category">Категория услуги:</label>
           <select id="category" name="category" class="input-field">
@@ -78,12 +78,13 @@
           </select>
 
           <label for="comments" key="comments">Комментарий:</label>
-          <textarea id="comments" name="comments" class="input-field" rows="4" placeholder="Введите детали заказа..." key="namePlaceholder"></textarea>
+          <textarea id="comments" name="comments" class="input-field" rows="4"></textarea>
 
           <label for="url" id="attach-file" key="attach-file">Указать ссылку на референс</label>
           <input type="url" id="url" name="url" class="input-field" placeholder="https://example.com" pattern="https://.*" required>
     
             </div>
+            <div id="orderError" class="error-msg"></div>
           <button type="submit" class="submit-button" key="send-order">Отправить заказ</button>
         </form>
       </div>
@@ -196,7 +197,7 @@
 
 
 
-
+    <script src="stetic/js/order-manage.js"></script>
     <script src="static/js/opem-modal-window.js"></script>
     <script src="static/js/multiplug.js"></script>
     <script src="static/js/logim-form-swap.js"></script>
