--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 
 <header class="header">
   <div class="header-logo">
-    <img src="/image/index/logopit.png">
+    <img src="static/images/index/logopit.png">
   </div>
   <input type="checkbox" id="nav_check" hidden>
   <nav>
