--- a/templates/index.html
+++ b/templates/index.html
@@ -299,8 +299,8 @@
           <i class='bx bx-mail-send icon-i' ></i>
         </div>
         <h2 key="email">Email-Адреса</h2>
-        <p>ideas@malstavo.com</p>
-        <p>ideas@malstavo.com</p>
+        <p>malik@malstavo.com</p>
+        <p>stavr@malstavo.com</p>
       </div>
     </div>
     <div class="map-container">
