--- a/templates/order-page.html
+++ b/templates/order-page.html
@@ -46,7 +46,7 @@
                 <li>
                     <a href="/#service-grid" key="services-header">Услуги</a>
                 </li>
-                <button id="openModalBtn" class="active" key="log-in-account">Войти<br> в аккаунт</button>
+<!--                <button id="openModalBtn" class="active" key="log-in-account">Войти<br> в аккаунт</button>-->
             </ul>
         </nav>
         <label for="nav_check" class="menu">
