--- a/templates/admin.html
+++ b/templates/admin.html
@@ -11,39 +11,48 @@
         <h1 class="text-center mb-4">Orders Management</h1>
         <div class="card">
             <div class="card-body">
-                <table class="table table-striped table-bordered">
-                    <thead class="table-dark">
-                        <tr>
-                            <th><a href="/admin?sort_by=id" class="text-white text-decoration-none">Order ID</a></th>
-                            <th>User Id</th>
-                            <th>Phone</th>
-                            <th><a href="/admin?sort_by=type" class="text-white text-decoration-none">Type</a></th>
-                            <th>Comment</th>
-                            <th>Links</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for order in orders %}
-                        <tr>
-                            <td>{{ order[0] }}</td>
-                            <td>{{ order[1] }}</td>
-                            <td>{{ order[2] }}</td>
-                            <td>{{ order[5] }}</td>
-                            <td>{{ order[3] }}</td>
-                            <td>{{ order[4] }}</td>
-                            <td>
-                                <form action="/admin/delete/{{ order[0] }}" method="POST" style="display:inline;">
-                                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                                </form>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                <form id="ordersForm" action="/admin/update" method="POST">
+                    <table class="table table-striped table-bordered">
+                        <thead class="table-dark">
+                            <tr>
+                                <th>Order ID</th>
+                                <th>User Id</th>
+                                <th>Phone</th>
+                                <th>Type</th>
+                                <th>Comment</th>
+                                <th>Links</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for order in orders %}
+                            <tr>
+                                <td><input type="text" name="order_id" value="{{ order[0] }}" readonly class="form-control"></td>
+                                <td><input type="text" name="user_id" value="{{ order[1] }}" class="form-control"></td>
+                                <td><input type="text" name="phone" value="{{ order[2] }}" class="form-control"></td>
+                                <td><input type="text" name="type" value="{{ order[5] }}" class="form-control"></td>
+                                <td><input type="text" name="comment" value="{{ order[3] }}" class="form-control"></td>
+                                <td><input type="text" name="files" value="{{ order[4] }}" class="form-control"></td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm delete-order" data-id="{{ order[0] }}">Delete</button>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
             </div>
         </div>
     </div>
+    <script>
+        document.querySelectorAll('.delete-order').forEach(button => {
+            button.addEventListener('click', function() {
+                fetch(`/admin/delete/${this.dataset.id}`, { method: 'POST' })
+                    .then(() => location.reload());
+            });
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
